# zpds-presentation-generator

./: .gitignore  README.md  academic_presentation.pptx  app.py  audio_functions.py  defined_functions.py  pres_teplate.py  presentation.pptx  pyproject.toml  requirements.txt  sophisticated_presentation.pptx
tts/: generator.ckpt  hyperparams.yaml
vocoder/: hyperparams.yaml  model.ckpt
